<resources>
    <string name="fontSemiBold">Montserrat-SemiBold.ttf</string>
    <string name="app_name">AddedFoodDelivery</string>
    <string name="internet_message_alert">Please Check Your internet connection.</string>
    <string name="val_email">Please Enter Your Email</string>
    <string name="val_validate_email">Please Enter Valid Email Address</string>
    <string name="val_password">Please Enter Your Password</string>
    <string name="val_confirm_password">Please Enter Your Password</string>
    <string name="val_name">Please Enter Your Name</string>
    <string name="val_conf_password">Password do not match</string>
    <string name="val_min_password">Please Enter Eight Digit Password</string>
    <string name="val_validate_phone">Please Enter Your Phone Number</string>
    <string name="val_message">Please Enter Message</string>
    <string name="location">Location</string>
    <string name="alert_title_need_Location">Need Location Permission</string>
    <string name="alert_msg_Location">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="order_your_food_from_the_best_restaurants_near_your_area_location">Order your food from the best restaurants\nnear your area location.</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_twitter">Continue with Twitter</string>
    <string name="continue_with_personal_email">Continue with Personal Email</string>
    <string name="i_ll_log_in_letter">I\'ll log in letter</string>
    <string name="by_logging_in_you_agree_to_added_terms_of_services_privacy_policy">By logging in you agree to ADDED Terms of Services,\nPrivacy Policy</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_create_now">
        <font fgcolor="#000000">Don\'t have an account?</font>
        <font fgcolor="#DB6D0B">Sign up</font>
    </string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please enter your email address. You will receive a link to create a new password via email</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="user_name">User Name</string>
    <string name="bottom_signup">
         <font fgcolor="#000000">By clicking Sign up you agree to the following\n</font>
         <font fgcolor="#DB6D0B">Terms and Conditions</font>
         <font fgcolor="#000000"> without reservation</font>
    </string>
    <string name="verify_your_phone_number">verify your\nphone number</string>
    <string name="we_have_sent_you_an_sms_with_code_to_the_nuber_above">We have sent you an sms with code to the\n number above</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="phone_verification">Phone verification</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="done">Done</string>
    <string name="bottom_verification">
        <font fgcolor="#000000">Didn\'t you received any code?\n</font>
        <font fgcolor="#DB6D0B">Resend a new code</font>
    </string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">My Added</string>
    <string name="trending_this_week">Trending This Week</string>
    <string name="view_all">View all</string>
    <string name="most_popular_reataurants">Most Popular Restaurants</string>
    <string name="rest_name_demo">Callifornia Rolls</string>
    <string name="demo_dish_name">Korean BBQ</string>
    <string name="demo_prise">$ 25.00</string>
    <string name="demo_time">Open 8:00 AM</string>
    <string name="filter">Filters</string>
    <string name="clear">Clear</string>
    <string name="sort_by">Sort by</string>
    <string name="relvance">Relvance</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="cost_low_high">Cost (Low to High)</string>
    <string name="cost_high_low">Cost (High to Low)</string>
    <string name="food_category">Food Category</string>
    <string name="apply_fillter">Apply Filter</string>
    <string name="prise">Price</string>
    <string name="hint_search">Search store or restaurant</string>
    <string name="my_added">My Added</string>
    <string name="demo_uname">Natiliya Potts</string>
    <string name="my_profile">My Profile</string>
    <string name="manage_address">Manage Address</string>
    <string name="change_your_delivery_address">Change your delivery address</string>
    <string name="help">Help</string>
    <string name="help_added_com">help@added.com</string>
    <string name="gift_card">Gift Card</string>
    <string name="past_order">Past Orders</string>
    <string name="not_available_gift_card">Not available Gift Card</string>
    <string name="orders_10">10 Orders</string>
    <string name="payment">Payment</string>
    <string name="update_payment_option">Update Payment Option</string>
    <string name="delivery_with_added">Delivery with Added</string>
    <string name="check_status">Check Status</string>
    <string name="get">Get $</string>
    <string name="add_more_in_wallet">Add More $ in Wallet</string>
    <string name="settings">Settings</string>
    <string name="notification_restaurants_profile_status">Notification, Restaurants, Profile, Status</string>
    <string name="now">Now</string>
    <string name="enable_your_location">Enable Your Location</string>
    <string name="please_allow_to_use_your_location_to_show_nearby_restaurant_on_the_map">Please allow to use your location to show nearby restaurant on the map.</string>
    <string name="enable_location">Enable Location</string>
    <string name="set_delivery_location">Set Delivery Location</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="dummy_add">10880 Malibu Point Florida</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tell_us_a_little_somthing_about_yourself_max_150_word">"tell us a little somthing about yourself ( max 150 word )"</string>
    <string name="save_changes">Save Changes</string>
    <string name="need_help">Need Help?</string>
    <string name="describe_your_problems">Describe your problems</string>
    <string name="add_a_screenshots_optional">Add a screenshots (optional)</string>
    <string name="have_you_read_our_faq_yet">Have you read our FAQ yet?</string>
    <string name="your_password_has_been_reset">Your password has been reset</string>
    <string name="you_ll_shortly_receive_an_email_with_a_code_to_setup_a_new_password">You\'ll shortly receive an email with a code to setup a new password.</string>
    <string name="title_settings">Settings</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="define_what_alerts_and_notifications_you_want_to_see">Define what alerts and notifications you want to see</string>
    <string name="change_password">Change Password</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_this_app">Share this App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_added">About Added</string>
    <string name="delet_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="type_your_query_here">Type your query here</string>
    <string name="dummy_chat">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="title_order_history">Order History</string>
    <string name="ordered_on">Ordered on</string>
    <string name="dummy_date">02 Jan 2020 at 08:00 PM</string>
    <string name="dummy_prise">$ 158.56</string>
    <string name="payment_completed">Payment completed</string>
    <string name="RepeatOrder">Repeat Order</string>
    <string name="dummy_restau_name">Langdon Hall</string>
    <string name="dummy_item">2 x Fitness Freak Salad</string>
    <string name="title_order_summery">Order Summary</string>
    <string name="your_order">Your Order</string>
    <string name="item_total">Item Total</string>
    <string name="taxes">Taxes</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="Total">Total</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order Number</string>
    <string name="paymet">Payment</string>
    <string name="completed">completed</string>
    <string name="lable_date">Date</string>
    <string name="dummy_mobile">+461 5894 2564</string>
    <string name="deliver_to">Deliver To</string>
    <string name="view_cart_on_next_step">View Cart on next step</string>
    <string name="order_help">Order Help</string>
    <string name="dumm_time">15:05 AM</string>
    <string name="estimated_arrivel">Estimated Arrivel</string>
    <string name="dummy_count">5 Items</string>
    <string name="live_status">Live Status</string>
    <string name="dumm_status">Order Processed</string>
    <string name="dummy_name">Victor M. Thompson</string>
    <string name="have_an_issue_with_your_order">Have an issue with your order?</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="call">Call</string>
    <string name="List">List</string>
    <string name="title_activity_rest_details">RestDetailsActivity</string>
    <string name="your_location">Your Location</string>
    <string name="complete_address">Complete address (optional)</string>
    <string name="save_as">Save this address as</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="address_hint">Ex : Dad\'s place, John\'s Home</string>
    <string name="save_proceed">Confirm Location</string>
</resources>