<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_current_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp">

        <com.addedfooddelivery_user.common.views.CustomTextView
            android:id="@+id/txtRestNameItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_restau_name"
            android:textColor="@color/text_gray_1"
            android:textSize="@dimen/_8ssp"
            app:font_name="montserratSemiBold" />

        <com.addedfooddelivery_user.common.views.CustomTextView
            android:id="@+id/txtItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/dummy_item"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp"
            app:font_name="montserratSemiBold" />

        <!-- <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:layout_marginTop="@dimen/_10ssp"
             android:background="@color/black" />-->


    </LinearLayout>

    <com.addedfooddelivery_user.common.views.CustomTextView
        android:id="@+id/itemPrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_2sdp"
        android:text="@string/dummy_prise"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        app:font_name="montserratSemiBold" />
</RelativeLayout>



