<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15ssp"
            android:src="@drawable/ic_popup_locationpin" />

        <com.addedfooddelivery_user.common.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18ssp"
            android:gravity="center"
            android:text="@string/enable_your_location"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:font_name="montserratBold" />

        <com.addedfooddelivery_user.common.views.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10ssp"
            android:gravity="center"
            android:text="@string/please_allow_to_use_your_location_to_show_nearby_restaurant_on_the_map"
            android:textColor="@color/text_gray_1"
            android:textSize="@dimen/_9ssp"
            app:font_name="montserratMedium" />

        <com.addedfooddelivery_user.common.views.CustomButton
            android:id="@+id/btLocation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_16sdp"

            android:backgroundTint="@color/colorPrimary"
            android:text="@string/enable_location"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_5sdp"
            app:elevation="@dimen/_2sdp"
            app:font_name="montserratSemiBold" />
    </LinearLayout>
